--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.application.name=pedidos-ms
 eureka.client.service-url.defaultZone=http://localhost:8081/eureka
+
+eureka.instance.instance-id=${spring.application.name}:${random.int}
+
 server.port=0
